# futila

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
